made the components from before

--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
     padding: .25rem;
 }
 
-/* home made hamburgers, anyone? */
+/* will replace this hamburger with svg or something */
 
 .hamburger {
     margin-right: 3em;
