fulfilled requests of ticket 10

--- a/styles.css
+++ b/styles.css
@@ -67,3 +67,10 @@ body {
 }
 .hamburger::before { top: 6px; }
 .hamburger::after { bottom: 6px; }
+
+/* Main content */
+
+
+.container-main{
+    padding: 2em;
+}
