--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,20 @@ body {
     /* font-style: italic; */
     color: orangered;
 }
+.container-main {
+    display: flex;
+    
+}
+/* sidebar */
+
+
+
+.sidebar-categories {
+    list-style-type: none;
+    padding-right: 2em;
+}
+
+
 
 /* nav stuff */
 
@@ -24,7 +38,6 @@ body {
     max-width: 100%;
     overflow: hidden;
     background-color: #333;
-    position: fixed; 
     top: 0; 
     width: 100%; 
     padding: 1.5em;
