--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0 auto;
+  margin: 0auto;
   font-family: "Hind Vadodara", sans-serif;
 }
 
@@ -8,6 +8,10 @@ body {
 }
 /* sidebar */
 
+.sidebar-main {
+  background-color: grey;
+  border: solid 1px pink;
+}
 .sidebar-categories {
   list-style-type: none;
   cursor: pointer;
